--- a/src/manageWidgetNew/sider/style.css
+++ b/src/manageWidgetNew/sider/style.css
@@ -98,6 +98,7 @@
     position: relative;
     cursor: pointer;
     background:rgba(255,255,255,1);
+    border-radius: 3px;
 }
 .list_item_content:global(.item-checked){
     border:1px solid rgba(0,179,158,1);
