--- a/src/manageWidgetNew/style.css
+++ b/src/manageWidgetNew/style.css
@@ -6,7 +6,8 @@
 }
 .um_content{
   /* padding:82px 7px 48px; */
-  flex: 1
+  flex: 1;
+  padding-bottom: 50px
 }
 .umBoxJustify{
   display: table;
