--- a/src/manageWidgetNew/sider/style.css
+++ b/src/manageWidgetNew/sider/style.css
@@ -15,6 +15,8 @@
     vertical-align: sub;
     color: #FF8B00;
     margin-right: 2px;
+    font-size: 20px;
+    font-weight: bold;
 }
 .sider_container{
   
