--- a/src/manageWidgetNew/sider/style.css
+++ b/src/manageWidgetNew/sider/style.css
@@ -111,9 +111,9 @@
 }
 .isAddColor {
     cursor:not-allowed;
-    background:rgba(243,243,243,1);
-    box-shadow:0px 0px 2px 0px rgba(0,0,0,0.15),0px 2px 4px 0px rgba(0,0,0,0.15);
+    /* box-shadow:0px 0px 2px 0px rgba(0,0,0,0.15),0px 2px 4px 0px rgba(0,0,0,0.15); */
     border:1px solid rgba(227,231,233,1)!important;
+    background: rgba(250,251,252,1);
 }
 .isAddColor .title_name{
     color:#A5ADBA !important;
