--- a/src/manageWidgetNew/style.css
+++ b/src/manageWidgetNew/style.css
@@ -13,8 +13,7 @@
   display: table;
   width: 100%;
 	height:48px;
-  padding:14px 0px;
-  padding-left: 75px;
+  padding:14px 75px;
 	position:relative;
 	background:rgba(255,255,255,1);
   box-shadow:0px 1px 5px 0px rgba(0,0,0,0.1);
@@ -43,6 +42,7 @@
 }
 .saveArea{
   width: 360px;
+  text-align: right
 }
 .saveArea>div{
   margin-left:8px;
