--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -1,18 +1,22 @@
 .container{
-
+  padding-bottom: 16px;
 }
 
 .title{
-  margin-top: 16px;
-  height:16px;
+  height:40px;
   font-size:14px;
   font-family:MicrosoftYaHei;
   color:rgba(102,102,102,1);
-  line-height:16px;
+  line-height:40px;
+  padding-left: 15px;
+  background: #F3F3F3;
+  margin-bottom: 20px; 
 }
 
 .borderBox{
   margin-top: 8px;
+  margin-left: 16px;
+  margin-right: 16px;
   height: 170px;
   background: #FFFFFF;
   border:1px solid rgb(210,210,210);
@@ -35,27 +39,27 @@
   padding:5px;
 }
 .borderBox :global(.u-menu .u-menu-item-active){
-  background: #f3f3f3;
-  color: #E14C46;
+  background: #F3F5F9;
+  color: #505766;
 }
 
 .u-menu-inline .u-menu-selected {
   border: none;
-  color: #E14C46;
+  color: #505766;
 }
 .borderBox :global(.u-menu-inline > .u-menu-submenu-active){
-  background: #f3f3f3;
-  color: #E14C46 ;
+  background: #F3F5F9;
+  color: #505766 ;
 }
 .borderBox :global(.u-menu .u-menu-submenu-active > .u-menu-submenu-title){
-  background: #f3f3f3;
-  color: #E14C46;
+  background: #F3F5F9;
+  color: #505766;
 }
 .borderBox :global(.u-menu-submenu-selected){
   background: none;
 }
 .borderBox :global(.u-menu-inline .u-menu-item-selected){
-  background: #e4e4e4;
+  background: #FFF7E7;
   color: #555555;
 }
 .borderBox input{
@@ -77,19 +81,29 @@
   outline: 0;
   transition: all ease .1s;
 }
+.borderBox :global(.u-menu-inline > .u-menu-item){
+  position: relative;
+  padding-left: 30px !important;
+}
+.borderBox :global(.iconfont){
+  position: absolute;
+  left: 5px;
+  font-size: 16px;
+  font-weight: 100;
+}
 
 .footer{
-  padding-top: 9px;
+  padding-top: 10px;
+  padding-right: 16px;
 }
 .footer :global(.u-button){
-  height: 22px;
+  height: 30px;
   font-size:14px;
   min-width: 0;
   font-family:MicrosoftYaHei;
   line-height:21px;
   padding: 0 12px;
   border-radius: 3px ;
-  background:#fff;
 }
 .footer :global(.u-button-danger[disabled]){
   cursor: not-allowed;
@@ -101,15 +115,23 @@
   background-color: #e0e0e0;
   border: none;
 }
+.footer div:first-child > button{
+  background:#fff;
+}
 .footer :global(.u-button-danger){
   background:#E14C46;
 }
 
 .selectedli{
-  color: #E14C46 !important;
+  color: #505766 !important;
 }
 
 .saveBtn{
   margin-right: 5px;
 }
 
+.footer :global(.iconfont){
+  font-weight: 100;
+  position: relative;
+  top: 3px;
+}
