--- a/src/loading/style.css
+++ b/src/loading/style.css
@@ -8,8 +8,8 @@
     z-index: 2001;
 }
 .loading_body{
-    width:110px;
-    height:110px;
+    width:90px;
+    height:90px;
     background:rgba(0,0,0,0.7);
     border-radius: 6px ;
     color:#fff;
@@ -22,17 +22,18 @@
     color:rgba(255,255,255,1);
     line-height:19px;
     text-align: center;
-    padding: 22px;
+    padding: 22px 0 12px;
     box-sizing: border-box;
 }
 .loading_modal .loading_icon{
-    font-size :48px;
+    font-size :32px;
     color:#fff;
     animation: rotating 2s linear infinite;
     display: inline-block;
 }
 .loading_content{
-    padding-top: 10px;
+    padding-top: 6px;
+    font-size: 12px;
 }
 @keyframes rotating{
     0% {
