--- a/src/manageWidgetCollision/manageWidgetItem/style.css
+++ b/src/manageWidgetCollision/manageWidgetItem/style.css
@@ -301,10 +301,12 @@
   background-color: indianred;
 }
 .card_shadow {
-  background: rgba(204,207,221,1);
-  position: absolute;
+  background: #fff;
+  position: absolute; 
   border-radius: 3px;
   transition: all 0.2s ease-out;
+  opacity: .5;
+  border:1px dashed #333;
 }
 .card {
   background: #fff;
@@ -320,18 +322,30 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
+  background: url(../assets/cover.svg) no-repeat;
+  background-size: contain;
+  width:40%;
+  height:40%
 }
 .card_footer {
-  /* display: flex; */
-  /* justify-content: space-between; */
+  display: flex;
+  justify-content: flex-end;
   position: absolute;
-  height: 35px;
+  height: 20%;
   width: 100%;
-  padding: 7px 8px;
+  /* padding: 7px 8px; */
   bottom: 0;
   background: #f2f2f2;
-  text-align: right
- 
+  align-items:  center;
+}
+.card_footer :global(.diworkiconfont::before ){
+  font-weight: bold;
+  top: 2px;
+  position: relative;
+  cursor: pointer;
+}
+.card_footer:global(.ie11 .diworkiconfont){
+  cursor: pointer;
 }
 .card_delete {
   font-size: 19px;
@@ -340,4 +354,12 @@
 }
 .card_delete:hover {
   color: #111111;
+}
+.card :global(.cardTitle){
+  margin-top: 5px;
+  padding-left: 10px
+}
+.card_shadow :global(.cardTitle){
+  margin-top: 5%;
+  padding-left: 10px
 }
