--- a/src/manageWidgetCollision/style.css
+++ b/src/manageWidgetCollision/style.css
@@ -1,8 +1,15 @@
 .page_home :global(.lebra-navbar-left-icon){
 }
 .um_content{
-  padding:82px 23px 48px;
-  flex: 1
+  padding:40px 23px 48px;
+  flex: 1;
+  position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 320px;
+    right: 0;
+    overflow-y: scroll;
+    overflow-x: hidden
 }
 .umBoxJustify{
   display: table;
