--- a/src/button/style.css
+++ b/src/button/style.css
@@ -34,7 +34,7 @@ button.btn.u8c_primary:disabled:hover,
 button.btn.u8c_primary:disabled,
 button.btn.u8c_primary:disabled:hover{
   background:linear-gradient(315deg,rgba(254,166,153,1) 0%,rgba(246,145,145,1) 100%);
-  color: #bfbfbf;
+  color: #fff;
 }
 
 /* u8c_default  */
@@ -77,6 +77,7 @@ button.btn.u8c:disabled,
 button.btn.u8c:disabled:hover{
   background:#505766;
   color: #ffffff;
+  opacity: 0.6;
 }
 
 
