--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -24,6 +24,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: bold;
+  font-size: 20px;
+  font-weight: bold;
+  color: #555555;
 }
 
 .icon-Set-up:before {
