--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -76,7 +76,7 @@
   transition: border-color ease-in-out 0.15s;
 }
 .borderBox input:focus {
-  border-color: rgba(0,205,195,1);
+  border-color: #505766;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
   outline: 0;
   transition: all ease .1s;
