--- a/src/icon/font/iconfont.css
+++ b/src/icon/font/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {font-family: "font_family_u8c";
-  src: url('iconfont.eot?t=1557801195019'); /* IE9 */
-  src: url('iconfont.eot?t=1557801195019#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1557801195019') format('woff'),
-  url('iconfont.ttf?t=1557801195019') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
-  url('iconfont.svg?t=1557801195019#font_family') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1560406819337'); /* IE9 */
+  src: url('iconfont.eot?t=1560406819337#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1560406819337') format('woff'),
+  url('iconfont.ttf?t=1560406819337') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+  url('iconfont.svg?t=1560406819337#font_family') format('svg'); /* iOS 4.1- */
 }
 
 :global(.u8ciconfont) {
@@ -2212,6 +2212,22 @@
 
 .icon-hebingxingzhuang1:before {
   content: "\e86e";
+}
+
+.icon-shuzhankai:before {
+  content: "\e870";
+}
+
+.icon-shushouqi:before {
+  content: "\e871";
+}
+
+.icon-xinzeng:before {
+  content: "\e86f";
+}
+
+.icon-fanhui:before {
+  content: "\e872";
 }
 
 /* 000000000 */
