首页编辑左右字体，左侧滚动条样式

--- a/src/manageWidgetCollision/manageGroup/style.css
+++ b/src/manageWidgetCollision/manageGroup/style.css
@@ -223,6 +223,7 @@
 }
 .groupArea :global(#widget-container){
   position: relative;
+  font-family: Microsoft YaHei,Arial!important;
 }
 .addBtn :global(.u-button){
   width: 100%;
