--- a/src/manageWidgetCollision/sider/style.css
+++ b/src/manageWidgetCollision/sider/style.css
@@ -28,8 +28,24 @@
 .sider_container::-webkit-scrollbar{
     display: block
 }
+.sider_container:global(::-webkit-scrollbar){
+    display: block
+}
+.sider_container::-webkit-scrollbar {
+    width: 7px;    
+    height: 7px;
+}
+.sider_container::-webkit-scrollbar-thumb {
+    background:rgba(193,193,193,1);
+    border-radius:100px;
+}
+.sider_container::-webkit-scrollbar-track {
+    border-radius: 0;
+    background: #F3F3F3;
+
+}
 .sider_container :global(.sider-container-fixed){
-    width: 100%;
+    width: 99%;
     /* position:fixed; */
     /* overflow: hidden; */
     background:rgba(255,255,255,1);
@@ -305,6 +321,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     overflow: hidden;
+    font-family: Microsoft YaHei,Arial!important;
 }
 .sider_container :global(.serviceArea .result_app_list_3){
     width: 100%;
