--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -77,7 +77,7 @@
 }
 .borderBox input:focus {
   border-color: #505766;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  /* box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); */
   outline: 0;
   transition: all ease .1s;
 }
@@ -134,4 +134,12 @@
   font-weight: 100;
   position: relative;
   top: 3px;
+}
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+  margin-right:5px;
 }
