--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -3,6 +3,7 @@
 }
 
 .title{
+  position: relative;
   height:40px;
   font-size:14px;
   font-family:MicrosoftYaHei;
@@ -12,7 +13,15 @@
   background: #F3F3F3;
   margin-bottom: 20px; 
 }
-
+.close{
+  position: absolute;
+  font-size: 18px;
+  top: 10px;
+  right: 14px;
+  line-height: 20px;
+  color: #999999;
+  cursor: pointer;
+}
 .borderBox{
   margin-top: 8px;
   margin-left: 16px;
