字体图标优化

--- a/src/icon/font/iconfont.css
+++ b/src/icon/font/iconfont.css
@@ -2232,7 +2232,7 @@
 
 /* 000000000 */
 
-.icon-shaixuan:before {
+/* .icon-shaixuan:before {
   content: "\e85f";
 }
 
@@ -2242,5 +2242,5 @@
 
 .icon-zhuxiao:before {
   content: "\e991";
-}
+} */
 
