--- a/src/manageWidgetCollision/manageGroup/style.css
+++ b/src/manageWidgetCollision/manageGroup/style.css
@@ -154,6 +154,20 @@
   color: #505766;
   border-radius: 3px;
 }
+.titleInputArea :global(#widgetNameMultiLangText){
+  width:176px;
+	height:22px;
+	padding:0 9px;
+	font-size:12px;
+  color:#111111;
+  float: left;
+  color: #505766;
+  border-radius: 3px;
+}
+.titleInputArea :global(.ac-input-locale .input-icon){
+  top: -4px!important;
+  right: 4px!important;
+}
 .newGroupName:global(.input){
   width:176px;
   height:22px;
