--- a/src/button/style.css
+++ b/src/button/style.css
@@ -1,271 +1,298 @@
-button.btn{
+button.btn {
   min-width: 80px;
-  height:32px;
+  height: 32px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", SimSun, sans-serif;
-  font-size:14px;
+  font-size: 14px;
   line-height: 32px;
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  cursor:pointer;
-  border-radius: 3px ;
+  cursor: pointer;
+  border-radius: 3px;
   box-sizing: border-box;
-  margin:0 8px;
-  padding:0 16px;
+  margin: 0 8px;
+  padding: 0 12px;
 }
-.btn>i{
-  margin-right:8px;
+
+.btn>i {
+  margin-right: 8px;
 }
+
 /* u8c_primary  */
-button.btn.u8c_primary{
-  background:linear-gradient(45deg,rgba(252,76,47,1) 0%,rgba(238,34,35,1) 100%);
+
+button.btn.u8c_primary {
+  background: linear-gradient(45deg, rgba(252, 76, 47, 1) 0%, rgba(238, 34, 35, 1) 100%);
   color: #ffffff;
 }
-button.btn.u8c_primary:hover{
-  background:linear-gradient(315deg,rgba(252,76,47,1) 0%,rgba(238,34,35,1) 100%);
+
+button.btn.u8c_primary:hover {
+  background: linear-gradient(315deg, rgba(252, 76, 47, 1) 0%, rgba(238, 34, 35, 1) 100%);
   color: #ffffff;
 }
-button.btn.u8c_primary:active{
-  background:linear-gradient(315deg,rgba(252,76,47,1) 0%,rgba(238,34,35,1) 100%);
+
+button.btn.u8c_primary:active {
+  background: linear-gradient(315deg, rgba(252, 76, 47, 1) 0%, rgba(238, 34, 35, 1) 100%);
   color: #ffffff;
 }
-button.btn.u8c_primary:disabled,
-button.btn.u8c_primary:disabled:hover,
-button.btn.u8c_primary:disabled,
-button.btn.u8c_primary:disabled:hover{
-  background:linear-gradient(315deg,rgba(254,166,153,1) 0%,rgba(246,145,145,1) 100%);
+
+button.btn.u8c_primary:disabled, button.btn.u8c_primary:disabled:hover, button.btn.u8c_primary:disabled, button.btn.u8c_primary:disabled:hover {
+  background: linear-gradient(315deg, rgba(254, 166, 153, 1) 0%, rgba(246, 145, 145, 1) 100%);
   color: #fff;
 }
 
 /* u8c_default  */
-button.btn.u8c_default{
-  background:#DBE0E5;
-  color:#505766;
+
+button.btn.u8c_default {
+  background: #DBE0E5;
+  color: #505766;
 }
-button.btn.u8c_default:hover{
+
+button.btn.u8c_default:hover {
   background: #E5E9EC;
-  color:#505766;
+  color: #505766;
 }
-button.btn.u8c_default:active{
-  background:#E5E9EC;
-  color:#505766;
+
+button.btn.u8c_default:active {
+  background: #E5E9EC;
+  color: #505766;
 }
-button.btn.u8c_default:disabled,
-button.btn.u8c_default:disabled:hover,
-button.btn.u8c_default:disabled,
-button.btn.u8c_default:disabled:hover{
-  background:#F7F7F7;
+
+button.btn.u8c_default:disabled, button.btn.u8c_default:disabled:hover, button.btn.u8c_default:disabled, button.btn.u8c_default:disabled:hover {
+  background: #F7F7F7;
   color: #CCCCCC;
 }
 
 /* u8c  */
-button.btn.u8c{
+
+button.btn.u8c {
   background: #505766;
   color: #ffffff;
 }
-button.btn.u8c:hover{
-  background:#616874;
+
+button.btn.u8c:hover {
+  background: #616874;
   color: #ffffff;
 }
-button.btn.u8c:active{
-  background:#616874;
+
+button.btn.u8c:active {
+  background: #616874;
   color: #ffffff;
 }
-button.btn.u8c:disabled,
-button.btn.u8c:disabled:hover,
-button.btn.u8c:disabled,
-button.btn.u8c:disabled:hover{
-  background:#505766;
+
+button.btn.u8c:disabled, button.btn.u8c:disabled:hover, button.btn.u8c:disabled, button.btn.u8c:disabled:hover {
+  background: #505766;
   color: #ffffff;
   opacity: 0.6;
 }
 
-
 /** 品牌红 **/
-button.btn.brand_btn{
-  background:#e14c46;
-  color:rgba(255,255,255,1);
+
+button.btn.brand_btn {
+  background: #e14c46;
+  color: rgba(255, 255, 255, 1);
 }
-button.btn.brand_btn:hover{
-  background:#d23d37;
-  color:rgba(255,255,255,1);
+
+button.btn.brand_btn:hover {
+  background: #d23d37;
+  color: rgba(255, 255, 255, 1);
 }
-button.btn.brand_btn:active{
-  background:#b2332e;
-  color:rgba(255,255,255,1);
+
+button.btn.brand_btn:active {
+  background: #b2332e;
+  color: rgba(255, 255, 255, 1);
 }
-button.btn.brand_btn:disabled,
-button.btn.brand_btn:disabled:hover,
-button.btn.default_btn:disabled,
-button.btn.default_btn:disabled:hover{
-  background:#f3f3f3;
+
+button.btn.brand_btn:disabled, button.btn.brand_btn:disabled:hover, button.btn.default_btn:disabled, button.btn.default_btn:disabled:hover {
+  background: #f3f3f3;
   color: #bfbfbf;
 }
 
 /** 默认**/
+
 button.default_btn {
-  color:#555;
-  background:#e4e4e4;
+  color: #555;
+  background: #e4e4e4;
 }
-button.default_btn:hover{
-  background:#f3f3f3;
-  color:#555;
+
+button.default_btn:hover {
+  background: #f3f3f3;
+  color: #555;
 }
-button.default_btn:active{
-  background:#fcedec;
-  color:#e14c46;
+
+button.default_btn:active {
+  background: #fcedec;
+  color: #e14c46;
 }
 
 /** 默认带边框 **/
+
 button.default_line_btn {
-  color:rgba(255,255,255,1);
-  background:rgba(255,255,255,0.08);
-  border: 1px solid rgba(255,255,255,0.8);
+  color: rgba(255, 255, 255, 1);
+  background: rgba(255, 255, 255, 0.08);
+  border: 1px solid rgba(255, 255, 255, 0.8);
 }
-button.default_line_btn:active{
-  background:rgba(252,237,236,1);
-  color:rgba(225,76,70,1);
+
+button.default_line_btn:active {
+  background: rgba(252, 237, 236, 1);
+  color: rgba(225, 76, 70, 1);
 }
-button.default_line_btn:hover{
-  border: 1px solid rgba(255,255,255,0.5);
-  background:rgba(255,255,255,0.08);
-  color:rgba(255,255,255,1);
+
+button.default_line_btn:hover {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.08);
+  color: rgba(255, 255, 255, 1);
 }
-button.default_line_btn:disabled{
-  color:rgba(165,173,186,1);
-  background:rgba(245,246,248,1);
+
+button.default_line_btn:disabled {
+  color: rgba(165, 173, 186, 1);
+  background: rgba(245, 246, 248, 1);
 }
 
 /**  默认无背景色 **/
+
 button.default_alpha_btn {
-  font-family:PingFangSC-Regular;
-  color:rgba(71,77,84,1);
+  font-family: PingFangSC-Regular;
+  color: rgba(71, 77, 84, 1);
   background: transparent;
 }
-button.default_alpha_btn:active{
-  background:rgba(225,76,70,0.1);
-  color:rgba(225,76,70,1);
+
+button.default_alpha_btn:active {
+  background: rgba(225, 76, 70, 0.1);
+  color: rgba(225, 76, 70, 1);
 }
-button.default_alpha_btn:hover{
-  color:rgba(71,77,84,1);
-  background:rgba(9,44,66,0.08);
+
+button.default_alpha_btn:hover {
+  color: rgba(71, 77, 84, 1);
+  background: rgba(9, 44, 66, 0.08);
 }
-button.default_alpha_btn:disabled{
-  background:rgba(9,44,66,0);
-  color:rgba(165,173,186,1);
+
+button.default_alpha_btn:disabled {
+  background: rgba(9, 44, 66, 0);
+  color: rgba(165, 173, 186, 1);
   cursor: not-allowed;
 }
 
 /*默认白色背景带边框*/
+
 button.default_white_btn {
-  font-family:MicrosoftYaHei;
-  color:rgba(71,77,84,1);
-  background:rgba(255,255,255,1);
-  border:1px solid rgba(78,89,104,0.25);
+  font-family: MicrosoftYaHei;
+  color: rgba(71, 77, 84, 1);
+  background: rgba(255, 255, 255, 1);
+  border: 1px solid rgba(78, 89, 104, 0.25);
 }
-button.default_white_btn:hover{
-  background:rgba(9,44,66,0.04);
+
+button.default_white_btn:hover {
+  background: rgba(9, 44, 66, 0.04);
 }
-button.default_white_btn:active{
-  background:rgba(225,76,70,0.1);
-  border-color: rgba(225,76,70,0.05);
-  color:rgba(225,76,70,1);
+
+button.default_white_btn:active {
+  background: rgba(225, 76, 70, 0.1);
+  border-color: rgba(225, 76, 70, 0.05);
+  color: rgba(225, 76, 70, 1);
 }
-button.default_white_btn:disabled{
-  background:rgba(9,44,66,0.04);
-  color:rgba(165,173,186,1);
+
+button.default_white_btn:disabled {
+  background: rgba(9, 44, 66, 0.04);
+  color: rgba(165, 173, 186, 1);
   cursor: not-allowed;
 }
 
 /** 选用样式一 **/
-button.check_selected_btn{
-  width:22px;
-  height:22px;
-  color:rgb(118, 127, 139);
+
+button.check_selected_btn {
+  width: 22px;
+  height: 22px;
+  color: rgb(118, 127, 139);
   background: transparent;
   margin: 0px;
-  margin-left:2px;
-}
-button.check_selected_btn:active{
-  color: rgba(0,203,124,1);
-}
-button.check_selected_btn:hover{
-  color: rgba(45,63,93,1);
-  background:none;
+  margin-left: 2px;
 }
 
-.disabled_check_selected_btn{
-
+button.check_selected_btn:active {
+  color: rgba(0, 203, 124, 1);
 }
+
+button.check_selected_btn:hover {
+  color: rgba(45, 63, 93, 1);
+  background: none;
+}
+
+.disabled_check_selected_btn {}
 
 /**  选用样式二 **/
-button.check_close_btn{
-  width:22px;
-  height:22px;
-  color:rgb(118, 127, 139);
+
+button.check_close_btn {
+  width: 22px;
+  height: 22px;
+  color: rgb(118, 127, 139);
   background: transparent;
   margin: 0px;
-  margin-left:2px;
-}
-button.check_close_btn:active{
-  color: rgba(45,63,93,1);
+  margin-left: 2px;
 }
 
-button.check_close_btn:hover{
-  color: rgba(68,70,81,1);
-  background:none;
+button.check_close_btn:active {
+  color: rgba(45, 63, 93, 1);
 }
 
-.disabled_check_close_btn{
-
+button.check_close_btn:hover {
+  color: rgba(68, 70, 81, 1);
+  background: none;
 }
 
+.disabled_check_close_btn {}
 
 /**  危险 **/
-button.danger_btn{
-  font-size:14px;font-family:AppleSystemUIFont;
-  color:rgba(255,255,255,1);
-  background:rgb(76, 76, 76);
-}
-button.danger_btn:hover{
-  background:rgba(95,95,95,1);
-  color:rgba(255,255,255,1);
-}
-button.danger_btn:active{
-  background:rgba(68,70,81,1);
-  color:rgba(255,255,255,1);
-}
-button.disabled_danger_btn{
-  background:rgba(9,44,66,0);
-  color:rgba(165,173,186,1);
+
+button.danger_btn {
+  font-size: 14px;
+  font-family: AppleSystemUIFont;
+  color: rgba(255, 255, 255, 1);
+  background: rgb(76, 76, 76);
 }
 
+button.danger_btn:hover {
+  background: rgba(95, 95, 95, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+button.danger_btn:active {
+  background: rgba(68, 70, 81, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+button.disabled_danger_btn {
+  background: rgba(9, 44, 66, 0);
+  color: rgba(165, 173, 186, 1);
+}
 
 /**  警告 **/
+
 button.warning_btn {
-  font-family:PingFangSC-Regular;
-  color:rgba(71,77,84,1);
-  background:rgba(255,171,0,1);
-}
-button.warning_btn:hover{
-  background:rgb(246, 197, 68);
-  font-family:PingFangSC-Medium;
-  color:rgba(71,77,84,1);
-}
-button.warning_btn:active{
-  background:rgba(255,153,31,1);
-  font-family:PingFangSC-Medium;
-  color:rgba(71,77,84,1);
+  font-family: PingFangSC-Regular;
+  color: rgba(71, 77, 84, 1);
+  background: rgba(255, 171, 0, 1);
 }
 
-button.warning_btn:disabled{
-  background:rgba(9,44,66,0.04);
-  color:rgba(165,173,186,1);
+button.warning_btn:hover {
+  background: rgb(246, 197, 68);
+  font-family: PingFangSC-Medium;
+  color: rgba(71, 77, 84, 1);
 }
 
+button.warning_btn:active {
+  background: rgba(255, 153, 31, 1);
+  font-family: PingFangSC-Medium;
+  color: rgba(71, 77, 84, 1);
+}
+
+button.warning_btn:disabled {
+  background: rgba(9, 44, 66, 0.04);
+  color: rgba(165, 173, 186, 1);
+}
 
 /*搜索*/
-button.search_icon_btn{
+
+button.search_icon_btn {
   height: 38px;
   border: 1px solid RGBA(78, 89, 104, 0.19);
   background: #fff;
